fixing overlaps and font-sizes

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,7 +9,7 @@ h2 {
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 2.5em;
 }
 
 li {
@@ -38,6 +38,7 @@ p {
 .header_link {
     font-family: $serif;
     font-weight: normal;
+    font-size: 1.1em;
 }
 
 .blog_title {
